objects/Salesforce_Setting__mdt.object
<CustomObject>
    <description>This holds small Custom Metadata values that we wish are configurable but are not enough to have its own Custom Metadata Type.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>This is used just to add context to a record in this Custom Metadata Type</description>
        <inlineHelpText>Please indicate why and where this is used.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Filter_Grouping__c</fullName>
        <description>A comma based list of keywords to filter the different metadata types into list views</description>
        <inlineHelpText>A comma based list of keywords to filter the different metadata types into list views</inlineHelpText>
        <label>Filter Grouping</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>value that will be used in Apex or wherever this metadata record is used</description>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <label>Salesforce Setting</label>
    <listViews>
        <fullName>All_Salesforce_Settings</fullName>
        <columns>MasterLabel</columns>
        <columns>Value__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Salesforce Settings</label>
    </listViews>
    <listViews>
        <fullName>FSL_Settings</fullName>
        <columns>MasterLabel</columns>
        <columns>Value__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Filter_Grouping__c</field>
            <operation>contains</operation>
            <value>FSL</value>
        </filters>
        <label>FSL Settings</label>
    </listViews>
    <listViews>
        <fullName>IdentifyBadAddress_Batch_Settings</fullName>
        <columns>MasterLabel</columns>
        <columns>Value__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Filter_Grouping__c</field>
            <operation>contains</operation>
            <value>IdentifyBadAddress</value>
        </filters>
        <label>IdentifyBadAddress Batch Settings</label>
    </listViews>
    <pluralLabel>Salesforce Settings</pluralLabel>
</CustomObject>